--- a/mail/themes/windows/mail/messageHeader.css
+++ b/mail/themes/windows/mail/messageHeader.css
@@ -51,11 +51,22 @@
   border: 0;
   background-color: transparent;
   -moz-user-focus: normal;
-  list-style-image: url("chrome://global/skin/tree/twisty.svg#clsd");
+  list-style-image: url("chrome://global/skin/tree/twisty-collapsed.svg");
+  -moz-context-properties: fill, fill-opacity;
+  fill: currentColor;
+  fill-opacity: 1;
 }
 
 #attachmentToggle[checked="true"] {
-  list-style-image: url("chrome://global/skin/tree/twisty.svg#open");
+  list-style-image: url("chrome://global/skin/tree/twisty-expanded.svg");
+}
+
+#attachmentToggle:hover {
+  fill: #4ed0f9;
+}
+
+#attachmentToggle:-moz-locale-dir(rtl) {
+  list-style-image: url("chrome://global/skin/tree/twisty-collapsed-rtl.svg");
 }
 
 #attachmentIcon {
@@ -265,12 +276,6 @@ mail-emailaddress[selected="true"] .emailDisplayButton{
   list-style-image: url("chrome://messenger/skin/icons/arrow-dn-grey.png");
 }
 
-/* ::::: view expand and collapse twisties  ::::: */
-
-.expandHeaderViewButton {
-  list-style-image: url("chrome://global/skin/tree/twisty.svg#open");
-}
-
 #header-view-toolbox {
   float: right;
 }
@@ -294,30 +299,6 @@ mail-emailaddress[selected="true"] .emailDisplayButton{
 
 #attachmentIcon {
   list-style-image: url("chrome://messenger/skin/icons/attachment-col.png");
-}
-
-#attachmentToggle:hover {
-  list-style-image: url("chrome://global/skin/tree/twisty.svg#clsd-hover");
-}
-
-#attachmentToggle[checked="true"]:hover {
-  list-style-image: url("chrome://global/skin/tree/twisty.svg#open-hover");
-}
-
-#attachmentToggle:-moz-locale-dir(rtl) {
-  list-style-image: url("chrome://global/skin/tree/twisty.svg#clsd-rtl");
-}
-
-#attachmentToggle[checked="true"]:-moz-locale-dir(rtl) {
-  list-style-image: url("chrome://global/skin/tree/twisty.svg#open-rtl");
-}
-
-#attachmentToggle:hover:-moz-locale-dir(rtl) {
-  list-style-image: url("chrome://global/skin/tree/twisty.svg#clsd-hover-rtl");
-}
-
-#attachmentToggle[checked="true"]:hover:-moz-locale-dir(rtl) {
-  list-style-image: url("chrome://global/skin/tree/twisty.svg#open-hover-rtl");
 }
 
 #attachmentSize {
