Bug 1472301 - Port bug 1400266 to TB: Use SVG context paint for Linux tree twisties. rs=jorgk

--- a/mail/components/im/themes/chat.css
+++ b/mail/components/im/themes/chat.css
@@ -558,7 +558,7 @@ grippy {
 
 
 /* from instantbird/themes/blist.css */
-%ifdef XP_WIN
+%ifndef XP_MACOSX
 imgroup .twisty {
   padding-top: 1px;
   width: 9px; /* The image's width is 9 pixels */
@@ -566,9 +566,8 @@ imgroup .twisty {
   margin-inline-end: 3px;
   margin-inline-start: 3px;
   background: url("chrome://global/skin/tree/twisty-expanded.svg") no-repeat center;
-  -moz-context-properties: fill, fill-opacity;
+  -moz-context-properties: fill;
   fill: currentColor;
-  fill-opacity: 1;
 }
 
 imgroup[closed] .twisty {
@@ -580,7 +579,6 @@ imgroup[closed]:-moz-locale-dir(rtl) .twisty {
 }
 
 %else
-%ifdef XP_MACOSX
 imgroup .twisty {
   width: 9px;
   height: 9px;
@@ -592,15 +590,6 @@ imgroup .twisty {
 imgroup[closed] .twisty {
   background: url("chrome://global/skin/arrow/arrow-rit-sharp.gif") no-repeat center;
 }
-%else
-imgroup .twisty {
-  -moz-appearance: treetwistyopen;
-}
-
-imgroup[closed] .twisty {
-  -moz-appearance: treetwisty;
-}
-%endif
 %endif
 
 #searchResultConv > .prplBuddyIcon > .protoIcon {
