--- a/calendar/base/themes/linux/widgets/calendar-widgets.css
+++ b/calendar/base/themes/linux/widgets/calendar-widgets.css
@@ -10,11 +10,17 @@ treenode-checkbox > .checkbox-check {
   border: none;
   width: 9px; /* The image's width is 9 pixels */
   height: 9px;
-  background: url(chrome://global/skin/tree/twisty-clsd.png) center no-repeat;
+  background: url(chrome://global/skin/tree/twisty-collapsed.svg) center no-repeat;
+  -moz-context-properties: fill;
+  fill: currentColor;
 }
 
 treenode-checkbox[checked="true"] > .checkbox-check {
-  background-image: url(chrome://global/skin/tree/twisty-open.png);
+  list-style-image: url("chrome://global/skin/tree/twisty-expanded.svg");
+}
+
+treenode-checkbox:-moz-locale-dir(rtl) > .checkbox-check {
+  list-style-image: url("chrome://global/skin/tree/twisty-collapsed-rtl.svg");
 }
 
 #task-tree-filtergroup {
