--- a/mail/themes/linux/mail/messenger.css
+++ b/mail/themes/linux/mail/messenger.css
@@ -511,6 +511,10 @@ statusbarpanel {
   -moz-appearance: none !important;
 }
 
+treechildren::-moz-tree-row {
+  min-height: 18px;
+}
+
 treechildren::-moz-tree-cell-text {
   padding-inline-start: 5px;
 }
