--- a/calendar/base/themes/common/calendar-management.css
+++ b/calendar/base/themes/common/calendar-management.css
@@ -2,33 +2,33 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this file,
  * You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-calendar-list-tree > tree > treechildren::-moz-tree-cell(color-treecol, color-default) {
+.calendar-list-tree > treechildren::-moz-tree-cell(color-treecol, color-default) {
     background-color: #a8c2e1;
 }
 
-calendar-list-tree > tree > treechildren::-moz-tree-cell(color-treecol) {
+.calendar-list-tree > treechildren::-moz-tree-cell(color-treecol) {
     margin: 1px;
 }
 
-calendar-list-tree > tree > treechildren::-moz-tree-cell(calendarname-treecol) {
+.calendar-list-tree > treechildren::-moz-tree-cell(calendarname-treecol) {
     margin-inline-start: 1px;
 }
 
-calendar-list-tree > tree > treechildren::-moz-tree-image(status-treecol, readonly) {
+.calendar-list-tree > treechildren::-moz-tree-image(status-treecol, readonly) {
     list-style-image: url(chrome://calendar-common/skin/calendar-status.png);
     -moz-image-region: rect(0px, 14px, 14px, 0px);
 }
 
-calendar-list-tree > tree > treechildren::-moz-tree-image(status-treecol, readfailed) {
+.calendar-list-tree > treechildren::-moz-tree-image(status-treecol, readfailed) {
     list-style-image: url(chrome://calendar-common/skin/calendar-status.png);
     -moz-image-region: rect(0px, 28px, 14px, 14px);
 }
 
-calendar-list-tree > tree > treechildren::-moz-tree-cell-text(disabled) {
+.calendar-list-tree > treechildren::-moz-tree-cell-text(disabled) {
     color: GrayText;
 }
 
-calendar-list-tree > tree {
+.calendar-list-tree {
   border: none;
   padding: 0;
   margin: 4px 0;
@@ -39,8 +39,8 @@ calendar-list-tree > tree {
   -moz-appearance: none;
 }
 
-calendar-list-tree > tree > treecols > treecol[hideheader="true"],
-calendar-list-tree > tree > treecols > treecol[hideheader="true"] {
+.calendar-list-tree > treecols > treecol[hideheader="true"],
+.calendar-list-tree > treecols > treecol[hideheader="true"] {
   font-size: 0px;
   border: none;
   padding: 0;
@@ -48,6 +48,6 @@ calendar-list-tree > tree > treecols > treecol[hideheader="true"] {
   height: 0px;
 }
 
-calendar-list-tree > tree > treecols > treecol[anonid="scrollbar-spacer"]:-moz-system-metric(overlay-scrollbars) {
+.calendar-list-tree > treecols > treecol[anonid="scrollbar-spacer"]:-moz-system-metric(overlay-scrollbars) {
   display: none;
 }
