--- a/calendar/base/themes/osx/calendar-management.css
+++ b/calendar/base/themes/osx/calendar-management.css
@@ -4,58 +4,58 @@
 
 @import url(chrome://calendar-common/skin/calendar-management.css);
 
-calendar-list-tree > tree > treechildren::-moz-tree-image(checkbox-treecol) {
+.calendar-list-tree > treechildren::-moz-tree-image(checkbox-treecol) {
     list-style-image: url(chrome://calendar/skin/checkbox-images.png);
     height: 16px;
     width: 16px;
 }
 
-calendar-list-tree:-moz-system-metric(mac-graphite-theme)
-> tree > treechildren::-moz-tree-image(checkbox-treecol) {
+.calendar-list-tree:-moz-system-metric(mac-graphite-theme)
+> treechildren::-moz-tree-image(checkbox-treecol) {
     list-style-image: url(chrome://calendar/skin/checkbox-images-graphite.png);
 }
 
-calendar-list-tree > tree > treechildren::-moz-tree-image(checkbox-treecol) {
+.calendar-list-tree > treechildren::-moz-tree-image(checkbox-treecol) {
     -moz-image-region: rect(0 32px 32px 0);
 }
 
-calendar-list-tree > tree > treechildren::-moz-tree-image(checkbox-treecol, checked) {
+.calendar-list-tree > treechildren::-moz-tree-image(checkbox-treecol, checked) {
     -moz-image-region: rect(0 64px 32px 32px);
 }
 
-calendar-list-tree > tree > treechildren::-moz-tree-image(checkbox-treecol, disabled) {
+.calendar-list-tree > treechildren::-moz-tree-image(checkbox-treecol, disabled) {
     -moz-image-region: rect(0 96px 32px 64px);
 }
 
-calendar-list-tree > tree > treechildren::-moz-tree-image(checkbox-treecol, checked, disabled) {
+.calendar-list-tree > treechildren::-moz-tree-image(checkbox-treecol, checked, disabled) {
     -moz-image-region: rect(0 128px 32px 96px);
 }
 
-calendar-list-tree > tree > treechildren::-moz-tree-cell(checkbox-treecol) {
+.calendar-list-tree > treechildren::-moz-tree-cell(checkbox-treecol) {
     padding: 0;
 }
 
-calendar-list-tree treechildren::-moz-tree-row(selected) {
+.calendar-list-tree treechildren::-moz-tree-row(selected) {
   background: url(chrome://calendar/skin/sidebar-item.png) 0 0 repeat-x #90A0C0;
 }
 
-calendar-list-tree treechildren::-moz-tree-row(selected, focus) {
+.calendar-list-tree treechildren::-moz-tree-row(selected, focus) {
   background-position: 0 -18px;
 }
 
-calendar-list-tree:-moz-system-metric(mac-graphite-theme) treechildren::-moz-tree-row(selected) {
+.calendar-list-tree:-moz-system-metric(mac-graphite-theme) treechildren::-moz-tree-row(selected) {
   background-position: 0 -36px;
 }
 
-calendar-list-tree:-moz-system-metric(mac-graphite-theme) treechildren::-moz-tree-row(selected, focus) {
+.calendar-list-tree:-moz-system-metric(mac-graphite-theme) treechildren::-moz-tree-row(selected, focus) {
   background-position: 0 -54px;
 }
 
-calendar-list-tree treechildren:-moz-window-inactive::-moz-tree-row(selected) {
+.calendar-list-tree treechildren:-moz-window-inactive::-moz-tree-row(selected) {
   background-position: 0 -72px;
 }
 
-calendar-list-tree treechildren::-moz-tree-cell-text(selected, focus),
-calendar-list-tree treechildren::-moz-tree-cell-text(selected) {
+.calendar-list-tree treechildren::-moz-tree-cell-text(selected, focus),
+.calendar-list-tree treechildren::-moz-tree-cell-text(selected) {
   color: HighlightText;
 }
