--- a/calendar/base/themes/osx/widgets/calendar-widgets.css
+++ b/calendar/base/themes/osx/widgets/calendar-widgets.css
@@ -8,6 +8,6 @@
   padding-inline-start: 18px;
 }
 
-calendar-list-tree .tree-scrollable-columns {
+.calendar-list-tree .tree-scrollable-columns {
    padding-inline-start: 18px;
 }
