--- a/calendar/base/themes/windows/widgets/calendar-widgets.css
+++ b/calendar/base/themes/windows/widgets/calendar-widgets.css
@@ -8,7 +8,7 @@
   padding-inline-start: 12px;
 }
 
-calendar-list-tree .tree-scrollable-columns {
+.calendar-list-tree .tree-scrollable-columns {
   padding-inline-start: 18px;
 }
 
