Bug 1561530 - Change calendar list tree to a list; r=Fallen, ui-r=Paenglab

--- a/calendar/base/themes/osx/widgets/calendar-widgets.css
+++ b/calendar/base/themes/osx/widgets/calendar-widgets.css
@@ -8,6 +8,12 @@
   padding-inline-start: 18px;
 }
 
-.calendar-list-tree .tree-scrollable-columns {
-   padding-inline-start: 18px;
+#calendar-list-pane #calendar-list richlistitem {
+  padding-inline-start: 18px;
+}
+
+#calendar-list .calendar-color {
+  /* Shift the color box closer to the name label */
+  margin-inline-start: 1px;
+  margin-inline-end: -1px;
 }
