--- a/calendar/base/themes/windows/widgets/calendar-widgets.css
+++ b/calendar/base/themes/windows/widgets/calendar-widgets.css
@@ -8,8 +8,8 @@
   padding-inline-start: 12px;
 }
 
-.calendar-list-tree .tree-scrollable-columns {
-  padding-inline-start: 18px;
+#calendar-list-pane #calendar-list richlistitem {
+  padding-inline-start: 14px;
 }
 
 .toolbarbutton-icon-begin {
