--- a/suite/themes/classic/navigator/tabbrowser.css
+++ b/suite/themes/classic/navigator/tabbrowser.css
@@ -51,12 +51,11 @@ tabpanels {
   padding-top: 2px; /* compensates the top margin of background tabs */
   padding-bottom: 3px; /* compensates the bottom margin of background tabs */
   background-color: -moz-dialog;
-  -moz-border-top-colors: unset;
-  -moz-border-right-colors: unset;
   color: -moz-dialogtext;
-  border: 1px solid Gray;
   border-top: 2px solid RoyalBlue;
+  border-right: 1px solid Gray;
   border-bottom: 0px none;
+  border-left: 1px solid Gray;
   -moz-appearance: none;
 }
 
@@ -77,13 +76,10 @@ tabpanels {
   -moz-appearance: tab;
   margin: 2px 0px 1px;
   padding: 0px;
-  border-top: 2px solid;
-  border-right: 2px solid;
-  border-left: 2px solid;
+  border-top: 1px solid ThreeDLightShadow;
+  border-right: 1px solid ThreeDDarkShadow;
   border-bottom: 1px solid ThreeDHighlight;
-  -moz-border-top-colors: ThreeDHighlight ThreeDLightShadow;
-  -moz-border-right-colors: ThreeDDarkShadow ThreeDShadow;
-  -moz-border-left-colors: ThreeDHighlight ThreeDLightShadow;
+  border-left: 1px solid ThreeDLightShadow;
   border-radius: 2px 2px 0px 0px;
 }
 
@@ -96,12 +92,12 @@ tabpanels {
 
 .scrollbutton-up:-moz-locale-dir(rtl),
 .scrollbutton-down:-moz-locale-dir(ltr) {
-  -moz-border-right-colors: ThreeDHighlight ThreeDShadow;
+  border-right-color: ThreeDShadow;
 }
 
 .scrollbutton-up:-moz-locale-dir(ltr),
 .scrollbutton-down:-moz-locale-dir(rtl) {
-  -moz-border-left-colors: ThreeDHighlight ThreeDShadow;
+  border-left-color: ThreeDShadow;
 }
 
 .scrollbutton-up,
