--- a/suite/themes/classic/communicator/viewSourceOverlay.css
+++ b/suite/themes/classic/communicator/viewSourceOverlay.css
@@ -9,10 +9,9 @@
 
 /* style findbar for being on top */
 #FindToolbar {
-  -moz-border-top-colors: ThreeDHighlight;
   border-top-width: 1px;
-  border-bottom: 2px solid;
-  -moz-border-bottom-colors: ThreeDShadow ThreeDHighlight;
+  border-top-color: ThreeDHighlight;
+  border-bottom: 1px solid ThreeDShadow;
   padding-top: 1px;
   padding-bottom: 0px;
 }
