--- a/suite/themes/classic/messenger/mailWindow1.css
+++ b/suite/themes/classic/messenger/mailWindow1.css
@@ -65,21 +65,18 @@
 /* ..... tree adjustments ..... */
 
 #folderTree {
-  border-right: 1px solid;
-  -moz-border-right-colors: ThreeDShadow;
+  border-right: 1px solid ThreeDShadow;
   min-width: 1px;
 }
 
 #threadTree {
-  border-bottom: 2px solid;
-  -moz-border-bottom-colors: ThreeDHighlight ThreeDLightShadow;
+  border-bottom: 1px solid ThreeDLightShadow;
   min-width: 1px;
 }
 
 #threadTree,
 #accountCentralBox {
-  border-left: 2px solid;
-  -moz-border-left-colors: ThreeDShadow ThreeDDarkShadow;
+  border-left: 1px solid ThreeDDarkShadow;
 }
 
 #locationIcon {
@@ -89,10 +86,8 @@
 /* ..... message pane adjustments ..... */
 
 #messagepanebox {
- border-top: 2px solid;
- border-left: 2px solid;
- -moz-border-top-colors: ThreeDShadow ThreeDDarkShadow;
- -moz-border-left-colors: ThreeDShadow ThreeDDarkShadow;
+ border-top: 1px solid ThreeDDarkShadow;
+ border-left: 1px solid ThreeDDarkShadow;
 }
 
 #msgHeaderView {
