--- a/suite/themes/classic/messenger/primaryToolbar.css
+++ b/suite/themes/classic/messenger/primaryToolbar.css
@@ -544,8 +544,7 @@ toolbar[iconsize="small"] > #extractTaskButton > .box-inherit > .toolbarbutton-i
 /* ::::: message notification bar style rules ::::: */
 
 .msgNotificationBar {
-  border-bottom: 1px solid;
-  -moz-border-bottom-colors: #000000;
+  border-bottom: 1px solid #000000;
   -moz-appearance: toolbox;
   background-color: #C7BC8F;
   color: black;
