--- a/suite/themes/classic/mac/messenger/addressbook/addressbook.css
+++ b/suite/themes/classic/mac/messenger/addressbook/addressbook.css
@@ -184,10 +184,6 @@ toolbar[iconsize="small"] > #button-abdelete[disabled] {
   border: none;
 }
 
-#dirTree > treechildren::-moz-tree-row {
-  background-color: transparent;
-}
-
 #dirTree > treechildren::-moz-tree-row(selected) {
   -moz-appearance: -moz-mac-source-list-selection;
   -moz-font-smoothing-background-color: -moz-mac-source-list-selection;
@@ -198,69 +194,28 @@ toolbar[iconsize="small"] > #button-abdelete[disabled] {
   -moz-font-smoothing-background-color: -moz-mac-active-source-list-selection;
 }
 
+#dirTree > treechildren::-moz-tree-twisty(selected),
 #dirTree > treechildren::-moz-tree-cell-text(selected) {
   color: #FFFFFF;
+  fill-opacity: 1;
 }
 
 #dirTree > treechildren::-moz-tree-twisty {
   width: 16px;
-  -moz-appearance: none;
   padding-bottom: 1px;
-  padding-inline-end: 4px;
-  list-style-image: url("chrome://global/skin/tree/arrow-disclosure.svg#arrow-disclosure-collapsed");
-}
-
-#dirTree > treechildren::-moz-tree-twisty(closed, selected) {
-  list-style-image: url("chrome://global/skin/tree/arrow-disclosure.svg#arrow-disclosure-collapsed-inverted");
-}
-
-#dirTree > treechildren::-moz-tree-twisty(open) {
-  list-style-image: url("chrome://global/skin/tree/arrow-disclosure.svg#arrow-disclosure-expanded");
-}
-
-#dirTree > treechildren::-moz-tree-twisty(open, selected) {
-  list-style-image: url("chrome://global/skin/tree/arrow-disclosure.svg#arrow-disclosure-expanded-inverted");
-}
-
-#dirTree > treechildren:-moz-locale-dir(rtl)::-moz-tree-twisty(closed) {
-  list-style-image: url("chrome://global/skin/tree/arrow-disclosure.svg#arrow-disclosure-collapsed-rtl");
-}
-
-#dirTree > treechildren:-moz-locale-dir(rtl)::-moz-tree-twisty(closed, selected) {
-  list-style-image: url("chrome://global/skin/tree/arrow-disclosure.svg#arrow-disclosure-collapsed-inverted-rtl");
 }
 
 @media (-moz-mac-yosemite-theme) {
+  #dirTree > treechildren::-moz-tree-twisty(selected),
   #dirTree > treechildren::-moz-tree-cell-text(selected) {
     color: -moz-dialogtext;
+    fill-opacity: 0.6;
   }
 
+  #dirTree > treechildren::-moz-tree-twisty(selected, focus),
   #dirTree > treechildren::-moz-tree-cell-text(selected, focus) {
     color: #FFFFFF;
-  }
-
-  #dirTree > treechildren::-moz-tree-twisty(closed, selected) {
-    list-style-image: url("chrome://global/skin/tree/arrow-disclosure.svg#arrow-disclosure-collapsed");
-  }
-
-  #dirTree > treechildren::-moz-tree-twisty(closed, selected, focus) {
-    list-style-image: url("chrome://global/skin/tree/arrow-disclosure.svg#arrow-disclosure-collapsed-inverted");
-  }
-
-  #dirTree > treechildren::-moz-tree-twisty(open, selected) {
-    list-style-image: url("chrome://global/skin/tree/arrow-disclosure.svg#arrow-disclosure-expanded");
-  }
-
-  #dirTree > treechildren::-moz-tree-twisty(open, selected, focus) {
-    list-style-image: url("chrome://global/skin/tree/arrow-disclosure.svg#arrow-disclosure-expanded-inverted");
-  }
-
-  #dirTree > treechildren:-moz-locale-dir(rtl)::-moz-tree-twisty(closed, selected) {
-    list-style-image: url("chrome://global/skin/tree/arrow-disclosure.svg#arrow-disclosure-collapsed-rtl");
-  }
-
-  #dirTree > treechildren:-moz-locale-dir(rtl)::-moz-tree-twisty(closed, selected, focus) {
-    list-style-image: url("chrome://global/skin/tree/arrow-disclosure.svg#arrow-disclosure-collapsed-inverted-rtl")
+    fill-opacity: 1;
   }
 }
 
